--- a/PumaBank/nbproject/project.properties
+++ b/PumaBank/nbproject/project.properties
@@ -72,7 +72,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PumaBank
-main.class=pumabank.PumaBank
+main.class=pumabank.Banco
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
